# MiroDailyWorkshop

./: .gitattributes  .gitignore  README.md  build.gradle.kts  draft.txt  settings.gradle.kts
MD.core/: build.gradle.kts
MD.core/src/androidTest/java/com/hika/mirodaily/core/: ExampleInstrumentedTest.kt
MD.core/src/main/java/com/hika/mirodaily/core/: AccessibilityServiceReceiver.kt
MD.core/src/main/java/com/hika/mirodaily/core/data_extractors/: TextExtensions.kt
MD.core/src/main/java/com/hika/mirodaily/core/helpers/: OperationSealing.kt  TextExtensions.kt
MD.core/src/main/res/values/: strings.xml
MD.core/src/main/res/values-en/: strings.xml
MD.core/src/test/java/com/hika/mirodaily/core/: ExampleUnitTest.kt
MD.ui/: build.gradle.kts
MD.ui/src/androidTest/java/com/hika/mirodaily/ui/: ExampleInstrumentedTest.kt
MD.ui/src/main/: AndroidManifest.xml
MD.ui/src/main/java/com/hika/mirodaily/ui/: MainActivity.kt
MD.ui/src/main/res/drawable/: bg_ai_ball.xml  bg_chat_bubble_ai.xml  bg_chat_bubble_user.xml  bg_icon_container.xml  bg_spinner.xml  dot_state_grey.xml  dot_state_ok.xml  ic_run_24.xml  ic_settings_24.xml  ripple_foreground.xml
MD.ui/src/main/res/layout/: activity_main.xml  dialog_game_ai_chat.xml  floating_window.xml  fragment_config.xml  fragment_more_dots.xml  fragment_start.xml  overlay.xml  row_bullet.xml
MD.ui/src/main/res/menu/: bottom_nav_menu.xml  menu_start_more.xml
MD.ui/src/main/res/navigation/: mobile_navigation.xml
MD.ui/src/main/res/values/: colors.xml  dimens.xml  strings.xml  style.xml  styles.xml  themes.xml
MD.ui/src/main/res/values-night/: colors.xml  themes.xml
MD.ui/src/main/res/values-zh/: strings.xml
MD.ui/src/test/java/com/hika/mirodaily/ui/: ExampleUnitTest.kt
MotionRecord/: Record.py  converted-OpenFreminet.csv  extractADBEvent.py  pushToDevice（Failed）.bat
accessibility/: build.gradle.kts  libyuv_converter.cpp  proguard-rules.pro
accessibility/src/androidTest/java/com/hika/accessibility/: ExampleInstrumentedTest.kt
accessibility/src/main/: AndroidManifest.xml
accessibility/src/main/assets/ncnn/: IconLabeling.param
accessibility/src/main/assets/yolo11/: IconLabeling.param
accessibility/src/main/cpp/: CMakeLists.txt  libyuv_converter.cpp  ncnn_detector.cpp
accessibility/src/main/cpp/includes/libyuv/: convert_from_argb.h  scale.h  scale_row.h
accessibility/src/main/cpp/libyuv/: convert_from_argb.cc
accessibility/src/main/java/com/hika/accessibility/: AccessibilityCoreService.kt  AccessibilityServicePart1_ConnectToMainProc.kt  AccessibilityServicePart2_MediaProjection.kt  AccessibilityServicePart3_EventListening.kt  AccessibilityServicePart4_ScreenWatching.kt  AccessibilityServicePart5_MotionRecording.kt  AccessibilityServicePart5_ScriptReplay.kt  ProjectionRequesterActivity.kt
accessibility/src/main/java/com/hika/accessibility/debug/: TestFloatingViewActivity.kt
accessibility/src/main/java/com/hika/accessibility/recognition/: ImageHandler.kt
accessibility/src/main/res/layout/: floating_test_view.xml
accessibility/src/main/res/xml/: accessibility.xml
accessibility/src/test/java/com/hika/accessibility/: ExampleUnitTest.kt
common/: build.gradle.kts
common/src/androidTest/java/com/hika/common/: ExampleInstrumentedTest.kt
common/src/main/java/com/hika/core/: Helpers.kt  MathAlgorithm.kt  MathAlgorithms.kt  SmallAlgorithms.kt
common/src/main/java/com/hika/core/interfaces/: FloatingWindowControll.kt  Logger.kt
common/src/main/res/values/: strings.xml
common/src/main/res/values-en/: strings.xml
common/src/test/java/com/hika/common/: ExampleUnitTest.kt
deprecateds/: New File.txt
drafts/: Cap.txt
drafts/1. Daily CheckIn Recognize/datas/: classes.txt
drafts/1. Daily CheckIn Recognize/datas/labels/training/: 186df28c-HSR.txt  8806dfd3-ZZZ.txt  9aa6eff8-HK2.txt  c1ca9443-HK2_3.txt
drafts/1. Daily CheckIn Recognize/training_procedure/: train.py
drafts/2. Daily CheckIn Recognize/datas/: notes.json
drafts/2. Daily CheckIn Recognize/datas/labels/training/: 15df41d2-HK3_3.txt  23434932-Genshin3.txt  341f12bb-HK3.txt  37dddeac-HSR3.txt  8b7f7ee4-ZZZ3.txt
drafts/2. Daily CheckIn Recognize/datas/labels/validation/: 32ce6db1-Genshin2.txt  604ad8bd-HK3_2.txt  b6221795-HSR2.txt  d4f1ad1e-ZZZ2.txt
drafts/Daily CheckIn Recognize/datas/: classes.txt  data.yaml  notes.json
drafts/Daily CheckIn Recognize/datas/labels/: train.cache  val.cache
drafts/Daily CheckIn Recognize/datas/labels/train/: GS1.txt  GS4.txt
drafts/Daily CheckIn Recognize/datas/labels/val/: HK2_2.txt
drafts/Daily CheckIn Recognize/train_scripts/: test.py  testNCNN.py
drafts/deprecated/: PeriodicRecognition.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
